--- a/src/component/style.css
+++ b/src/component/style.css
@@ -1,3 +1,84 @@
+@font-face {
+  font-family: "Open Sans", sans-serif;
+  src: url("./fonts/OpenSans-Light.ttf");
+  src: url("./fonts/opensans-light.woff");
+  src: url("./fonts/opensans-light.woff2");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Open Sans", sans-serif;
+  src: url("./fonts/OpenSans-Regular.ttf");
+  src: url("./fonts/opensans-regular.woff");
+  src: url("./fonts/opensans-regular.woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Open Sans", sans-serif;
+  src: url("./fonts/OpenSans-Bold.ttf");
+  src: url("./fonts/opensans-bold.woff");
+  src: url("./fonts/opensans-bold.woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SF Pro Display", sans-serif;
+  src: url("./fonts/SF-Pro-Display-Light.otf");
+  src: url("./fonts/sf-pro-display-light.woff");
+  src: url("./fonts/sf-pro-display-light.woff2");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SF Pro Display", sans-serif;
+  src: url("./fonts/SF-Pro-Display-Regular.otf");
+  src: url("./fonts/sf-pro-display-regular.woff");
+  src: url("./fonts/sf-pro-display-regular.woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SF Pro Display", sans-serif;
+  src: url("./fonts/SF-Pro-Display-Bold.otf");
+  src: url("./fonts/sf-pro-display-bold.woff");
+  src: url("./fonts/sf-pro-display-bold.woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SF Pro Text", sans-serif;
+  src: url("./fonts/SF-UI-Text-Light.ttf");
+  src: url("./fonts/sf-ui-text-light.woff");
+  src: url("./fonts/sf-ui-text-light.woff2");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SF Pro Text", sans-serif;
+  src: url("./fonts/SF-UI-Text-Regular.ttf");
+  src: url("./fonts/sf-ui-text-regular.woff");
+  src: url("./fonts/sf-ui-text-regular.woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SF Pro Text", sans-serif;
+  src: url("./fonts/SF-UI-Text-Bold.ttf");
+  src: url("./fonts/sf-ui-text-bold.woff");
+  src: url("./fonts/sf-ui-text-bold.woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
 #app {
   max-width: 1536px;
   margin: 0 auto;
@@ -157,6 +238,22 @@
   padding: 10px 0;
 }
 
+.mobile-menu-search-btn {
+  display: none !important;
+}
+
+#tablet-menu-check {
+  display: none;
+}
+
+.tablet-services-block {
+  display: none;
+}
+
+#tablet-services-check {
+  display: none;
+}
+
 .search-block-btn:active {
   border-color: #000;
 }
@@ -176,6 +273,10 @@
   color: #222222;
   text-decoration: none;
   margin-right: 32px;
+}
+
+.mobile-log-in-link {
+  display: none;
 }
 
 .log-in-icon, .cart-icon {
@@ -227,6 +328,10 @@
 .nav-item {
   text-decoration: none;
   color: #000000;
+}
+
+.tablet-menu-label {
+  display: none;
 }
 
 .services {
@@ -442,6 +547,11 @@
   outline: none;
 }
 
+.footer-arrow {
+  width: 11px;
+  height: 19px;
+}
+
 .footer-head-btn:active {
   background-color: #ccc;
 }
@@ -469,5 +579,485 @@
   background-image: url("./images/footer-right.png");
   background-size: contain;
   background-repeat: no-repeat;
+}
+
+@media (max-width: 1100px) {
+  .search-block-input {
+    width: 77%;
+  }
+  .search-block-btn {
+    width: 23%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .logo-img {
+    width: 7%;
+  }
+  .yandex-icon {
+    width: 13%;
+  }
+  .logo-desc {
+    display: none;
+  }
+  .cart-btn {
+    width: 13%;
+    padding-left: 1%;
+    padding-right: 1%;
+  }
+  .cart-icon {
+    height: 60%;
+    margin-right: 5px;
+  }
+  .cart-text {
+    width: 13%;
+  }
+  .log-in-icon {
+    margin-right: 5px;
+  }
+  .header-top-left {
+    width: 47%;
+  }
+  .header-top-right {
+    width: 40%;
+  }
+  .page-header {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  .services {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .services-description {
+    padding: 70px 55px;
+  }
+  .services-description-left {
+    width: 33%;
+  }
+  .services-description-right {
+    width: 60%;
+  }
+  .after-desc-block {
+    margin-top: 40px;
+  }
+  .after-desc-line-block {
+    width: 70%;
+  }
+  .about-company-links {
+    margin: 50px 0 20px;
+  }
+  .footer-videos-left {
+    width: 40%;
+  }
+  .footer-videos-right {
+    width: 40%;
+  }
+}
+
+@media (max-width: 768px) {
+  .header-top {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 7px 10px;
+  }
+  .header-top-left, .header-top-right {
+    width: 100%;
+  }
+  .header-top-left {
+    margin-bottom: 9px;
+  }
+  .header-top-wright-us {
+    margin-left: 4px;
+  }
+  .page-header {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  .logo-img {
+    width: 50px;
+    height: 50px;
+  }
+  .logo-desc {
+    margin: 0 16px 0 16px;
+    width: 182px;
+  }
+  .yandex-icon {
+    margin-right: 15px;
+    width: 100px;
+  }
+  .search-block {
+    margin-right: 20px;
+  }
+  .search-block-input {
+    width: 75%;
+  }
+  .search-block-btn {
+    width: 25%;
+  }
+  .log-in-link {
+    margin-right: 16px;
+  }
+  .cart-btn {
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 10px;
+  }
+  .cart-text {
+    display: none;
+  }
+  .cart-icon {
+    height: 81%;
+    width: 90%;
+  }
+  .menu-list-block {
+    position: relative;
+  }
+  .tablet-menu-label {
+    display: block;
+    margin-top: 20px;
+    width: 5%;
+  }
+  .nav {
+    display: none;
+  }
+  #tablet-menu-check:checked ~ .nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: absolute;
+    background: aqua;
+    border-radius: 5px;
+    width: 103%;
+    left: -6px;
+    z-index: 2;
+  }
+  .nav-list-item {
+    width: 99%;
+    text-align: center;
+    margin-bottom: 8px;
+  }
+  .nav-item {
+    border-radius: 18px 18px 18px 18px;
+    -moz-border-radius: 18px 18px 18px 18px;
+    -webkit-border-radius: 18px 18px 18px 18px;
+    border: 1px solid #000000;
+    width: 100%;
+    text-align: center;
+    display: block;
+    -webkit-transition: background-color 0.5s, color 0.5s;
+    transition: background-color 0.5s, color 0.5s;
+  }
+  .nav-item:hover {
+    background-color: #000;
+    color: #fff;
+  }
+  .services {
+    padding: 21px 3%;
+  }
+  .services-description {
+    padding: 50px 25px;
+  }
+  .services-description-left {
+    width: 38%;
+  }
+  .services-description-left-text {
+    font-size: 24px;
+    margin-bottom: 64px;
+  }
+  .send-summary {
+    padding: 10px 17%;
+  }
+  .after-desc-block-text {
+    font-size: 21px;
+  }
+  .after-desc-line-block {
+    width: 68%;
+  }
+  .about-company-links {
+    margin: 50px 0 0px;
+  }
+  .about-company-link {
+    width: 83%;
+  }
+  .about-company-link-arrow {
+    margin-left: 5px;
+  }
+  .page-footer {
+    padding: 45px 35px 63px;
+  }
+  .footer-head {
+    margin-bottom: 30px;
+  }
+  .footer-head-text {
+    font-size: 29px;
+  }
+  .footer-head-btn {
+    width: 30px;
+    height: 27px;
+    padding-top: 3px;
+  }
+  .footer-arrow {
+    width: 8px;
+  }
+  .footer-videos-left {
+    width: 45%;
+  }
+  .footer-videos-right {
+    width: 45%;
+  }
+}
+
+@media (max-width: 668px) {
+  .header-top-left {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .select-city {
+    width: 125px;
+    margin-bottom: 5px;
+  }
+  .search-block-btn {
+    display: none;
+  }
+  .tablet-services-block {
+    display: block;
+    margin-left: 30px;
+  }
+  .mobile-menu-search-btn {
+    display: block !important;
+    width: 22px !important;
+  }
+  .cart-btn {
+    padding-left: 5px;
+    padding-right: 4px;
+    width: 48px;
+  }
+  .cart-icon {
+    width: 25px;
+  }
+  .search-block {
+    min-height: 26px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .search-block-input {
+    width: 90%;
+    padding: 4px 4px;
+  }
+  .yandex-icon {
+    display: none;
+  }
+  .logo-img {
+    margin-right: 8%;
+  }
+  .services-block {
+    position: relative;
+  }
+  .services {
+    display: none;
+  }
+  #tablet-services-check:checked ~ .services {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 50%;
+    border: 1px solid black;
+    margin-left: 28px;
+    background: aquamarine;
+    position: absolute;
+    z-index: 1;
+  }
+  .services-item-wrapper {
+    width: 100%;
+    text-align: center;
+  }
+  .services-item:hover {
+    color: #fff;
+    background: #000;
+  }
+  .services-description-left-text {
+    font-size: 20px;
+  }
+  .send-summary {
+    padding: 10px 13%;
+  }
+  .after-desc-block-text {
+    font-size: 19px;
+  }
+  .after-desc-line-block {
+    width: 65%;
+  }
+  .footer-head-text {
+    font-size: 25px;
+  }
+  .footer-videos-left {
+    width: 47%;
+  }
+  .footer-videos-right {
+    width: 47%;
+  }
+}
+
+@media (max-width: 426px) {
+  .logo-img {
+    width: 45px;
+    height: 45px;
+  }
+  .log-in-btn {
+    display: none;
+  }
+  .log-in-icon {
+    height: 35px;
+  }
+  .header-top-left-number {
+    display: none;
+  }
+  .header-top-left-work-days {
+    display: none;
+  }
+  .search-block-input {
+    padding: 7px 4px;
+  }
+  .mobile-menu-search-btn {
+    height: 29px !important;
+  }
+  .cart-icon {
+    width: 22px;
+  }
+  .cart-btn {
+    width: 32px;
+    height: 30px;
+  }
+  .services-description-elems {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 25px;
+  }
+  .services-description-left {
+    width: 100%;
+  }
+  .services-description-right {
+    width: 100%;
+  }
+  .services-description-left-text {
+    font-size: 18px;
+    margin-bottom: 24px;
+  }
+  .send-summary {
+    padding: 10px 3%;
+    margin-bottom: 7px;
+    width: 50%;
+  }
+  .terms {
+    margin-bottom: 30px;
+  }
+  .after-desc-block {
+    margin-top: 20px;
+  }
+  .after-desc-block-text {
+    font-size: 17px;
+  }
+  .about-company-links {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: revert;
+        -ms-flex-align: revert;
+            align-items: revert;
+    margin-top: 35px;
+  }
+  .about-company-links-item {
+    margin-bottom: 15px;
+  }
+  .footer-videos {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer-videos-left {
+    width: 100%;
+    margin-bottom: 25px;
+  }
+  .footer-videos-right {
+    width: 100%;
+  }
+}
+
+@media (max-width: 376px) {
+  .header-top-wright-us {
+    display: none;
+  }
+  .connect-with-director {
+    display: none;
+  }
+  .header-top-right-icons {
+    width: 100%;
+  }
+  .send-summary {
+    padding: 6px 7%;
+    font-size: 13px;
+  }
+  .page-header {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .log-in-icon {
+    display: none;
+  }
+  .tablet-services-block {
+    margin-left: 15px;
+  }
+  .search-block {
+    margin-right: 5px;
+  }
+  .mobile-log-in-link {
+    display: block;
+    margin-right: 90%;
+  }
+  .services-description-left-text {
+    font-size: 16px;
+  }
+  .footer-head-text {
+    font-size: 20px;
+  }
+  .footer-head-btns {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer-head-btn {
+    width: 24px;
+    height: 26px;
+  }
+  .footer-arrow {
+    width: 6px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
