--- a/src/component/style.scss
+++ b/src/component/style.scss
@@ -88,7 +88,7 @@
   display: flex;
   justify-content: space-around;
   background: #FED600;
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-size: 13px;
   font-style: normal;
   font-weight: 600;
@@ -100,7 +100,7 @@
 }
 .select-city {
   background: #FED600;
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-size: 13px;
   font-style: normal;
   font-weight: 600;
@@ -135,7 +135,7 @@
   align-items: center;
 }
 .logo-desc{
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-style: italic;
   font-weight: normal;
   font-size: 13px;
@@ -166,7 +166,7 @@
   height: 100%;
   border: none;
   outline: none;
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
@@ -180,7 +180,7 @@
   border: 2px solid #D2001C;
   box-sizing: border-box;
   border-radius: 4px;
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
@@ -209,7 +209,7 @@
 .log-in-link {
   display: flex;
   align-items: center;
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
@@ -235,7 +235,7 @@
   padding-left: 18px;
   padding-right: 16px;
   box-sizing: border-box;
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
@@ -247,7 +247,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: normal;
   font-size: 13px;
@@ -271,7 +271,7 @@
   margin: 0;
 }
 .services-item {
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: bold;
   font-size: 13px;
@@ -299,7 +299,7 @@
   width: 25%;
 }
 .services-description-left-text {
-  font-family: SF Pro Display;
+  font-family: "SF Pro Display";
   font-style: normal;
   font-weight: normal;
   font-size: 27px;
@@ -321,7 +321,7 @@
   word-break: break-word;
 }
 .terms {
-  font-family: SF Pro Text;
+  font-family: "SF Pro Text";
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -343,7 +343,7 @@
   justify-content: space-between;
 }
 .after-desc-block-text {
-  font-family: SF Pro Text;
+  font-family: "SF Pro Text";
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
@@ -398,7 +398,7 @@
   margin-bottom: 54px;
 }
 .footer-head-text {
-  font-family: SF Pro Display;
+  font-family: "SF Pro Display";
   font-style: normal;
   font-weight: normal;
   font-size: 36px;
