--- a/src/component/style.css
+++ b/src/component/style.css
@@ -100,7 +100,7 @@
   -ms-flex-pack: distribute;
       justify-content: space-around;
   background: #FED600;
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-size: 13px;
   font-style: normal;
   font-weight: 600;
@@ -114,7 +114,7 @@
 
 .select-city {
   background: #FED600;
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-size: 13px;
   font-style: normal;
   font-weight: 600;
@@ -172,7 +172,7 @@
 }
 
 .logo-desc {
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-style: italic;
   font-weight: normal;
   font-size: 13px;
@@ -210,7 +210,7 @@
   height: 100%;
   border: none;
   outline: none;
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
@@ -226,7 +226,7 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 4px;
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
@@ -265,7 +265,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
@@ -299,7 +299,7 @@
   padding-right: 16px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
@@ -316,7 +316,7 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: normal;
   font-size: 13px;
@@ -349,7 +349,7 @@
 }
 
 .services-item {
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: bold;
   font-size: 13px;
@@ -387,7 +387,7 @@
 }
 
 .services-description-left-text {
-  font-family: SF Pro Display;
+  font-family: "SF Pro Display";
   font-style: normal;
   font-weight: normal;
   font-size: 27px;
@@ -412,7 +412,7 @@
 }
 
 .terms {
-  font-family: SF Pro Text;
+  font-family: "SF Pro Text";
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -446,7 +446,7 @@
 }
 
 .after-desc-block-text {
-  font-family: SF Pro Text;
+  font-family: "SF Pro Text";
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
@@ -529,7 +529,7 @@
 }
 
 .footer-head-text {
-  font-family: SF Pro Display;
+  font-family: "SF Pro Display";
   font-style: normal;
   font-weight: normal;
   font-size: 36px;
